--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FMApp</title>
+    <title><%= yield(:title) %> | F@M</title>
     <%= csrf_meta_tags %>
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,400i,700,700i|Permanent+Marker" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
