--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | F@M</title>
+    <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Amaranth:400,400i,700,700i|Permanent+Marker" rel="stylesheet">
 
