--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, "Home") %>
-<h1>Welcome to F@M!!</h1>
-<p>This is the app to help all of the family members stay in touch!!</p>
+<div class='center jumbotron'>
+    <h1>Welcome to F@M!!</h1>
+    <h2>This app is to help all of the family members stay in touch!!</h2>
+    <%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
