add about, search, cleanup

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "About") %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>About F@M</h1>
+<p>Thank you for visiting F@M! My name is Crystal Kelley, and I am an applications engineer on a path to becoming a full-stack developer.</p>
+<p>F@M is a web app I created mostly so that I can practice my Ruby on Rails programming skills, but also for my family and friends to communicate with each other without the distraction of all the ads and such on mainstream social media sites.  I'm not big into social media, but I do know that it is easier for some people to communicate that way.  This is my way of compromising. :-)</p>
+<p>So please enjoy the app, and <%= mail_to "crystal@famsocial.me", "contact me" %> with any thoughts and/or feedback.  Happy Posting!!!</p>
