--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,6 +56,7 @@ h2 {
 p {
     font-size: 1.1em;
     line-height: 1.7em;
+    text-align: center
 }
 
 /* header */
@@ -71,7 +72,7 @@ p {
     font-weight: bold;
     font-family: 'Permanent Marker', cursive;
     &:hover {
-        color: rgba(28, 114, 194, 0.877);
+        color: rgba(28, 194, 166, 0.877);
         text-decoration: none;
     }
 }
@@ -82,9 +83,9 @@ footer {
     margin-top: 45px;
     padding-top: 5px;
     border-top: 1px solid #eaeaea;
-    color: rgb(10, 139, 111);
+    color: rgb(124, 10, 139);
     a {
-        color: rgb(10, 139, 111);
+        color: rgb(139, 10, 74);
         &:hover {
             color: #222;
         }
