--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <nav>
         <ul>
             <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Contact", contact_path %></li>
+            <li><%= mail_to "crystal@famsocial.me", "Contact Me" %></li>
         </ul>
     </nav>
 </footer>
