--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,7 +21,7 @@
 <% else %>
     <div class='center jumbotron'>
         <h1>Welcome to F@M!!</h1>
-        <h2>This app is to help all of the family members stay in touch!!</h2>
+        <h2>Stay in touch with family and friends!!</h2>
         <%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
 <% end %>
