--- a/app/views/user_mailer/new_user.html.erb
+++ b/app/views/user_mailer/new_user.html.erb
@@ -2,7 +2,7 @@
 
 <p>Hi Crystal,</p>
 
-<p><%= @user.name %> joined the F@M App at <%= @user.created_at %>; account activated at <%= @user.activated_at %>.</p>
+<p><%= @user.name %> joined the F@M App at <%= @user.created_at %>.</p>
 
 <p>Thanks,</p>
 
