--- a/app/views/user_mailer/new_user.text.erb
+++ b/app/views/user_mailer/new_user.text.erb
@@ -1,6 +1,6 @@
 Hi Crystal,
 
-<%= @user.name %> joined the F@M App at <%= @user.created_at %>; account activated at <%= @user.activated_at %>.
+<%= @user.name %> joined the F@M App at <%= @user.created_at %>.
 
 Thanks,
 
