add character count

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@micropost, html: {multipart: true}) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
-        <%= f.text_area :content, placeholder: "Compose new F@Mpost..." %>
+        <%= f.text_area :content, placeholder: "Compose new F@Mpost...", class: "textarea" %>
+        <div class='count'></div>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
     <span class="picture">
@@ -16,4 +17,16 @@
             alert('Maximum file size is 5MB. Please choose a smaller size.');
         }
     });
+
+    $(document).ready(function() {
+    var text_max = 280;
+    $('.count').html(text_max + ' characters remaining');
+
+    $('.textarea').keyup(function() {
+        var text_length = $('.textarea').val().length;
+        var text_remaining = text_max - text_length;
+
+        $('.count').html(text_remaining + ' characters remaining');
+    });
+});
 </script>
